# ApprovalTests.cpp.Nursery

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  run_markdown_templates.sh  show_deps.bat
.github/workflows/: github_actions_build.yml
ApprovalTestsNursery/: ApprovalTestReporters.cpp  ApprovalTestReporters.h  AutoApproveIfMissingReporter.cpp  AutoApproveReporter.cpp  CIBuildOnlyReporter.cpp  CIBuildOnlyReporter.h  CMakeLists.txt  CatchReporter.cpp  CombinationApprovalsNew.h  CombinationApprovalsOld.h  ConsoleDiffReporter.cpp  ConsoleDiffReporter.h  FileUtilsAdditions.cpp  FileUtilsAdditions.h  FirstNFailuresReporter.h  ForegroundSystemLauncher.cpp  ForegroundSystemLauncher.h  ParallelFilesTestNamer.h  TextDiffReporter.cpp  TextDiffReporter.h
ApprovalTestsNursery/namers/: ExtendApprovalTestName.cpp  ExtendApprovalTestName.h  ParallelFilesTestNamer.h  SectionNameDisposer.h
ApprovalTestsNursery/reporters/: ApprovalTestReporters.cpp  ApprovalTestReporters.h  AutoApproveIfMissingReporter.cpp  AutoApproveIfMissingReporter.h  AutoApproveReporter.h  CIBuildOnlyReporter.cpp  CIBuildOnlyReporter.h  CatchReporter.h  ConsoleDiffReporter.h  FirstNFailuresReporter.cpp  FirstNFailuresReporter.h  ParallelFilesTestNamer.cpp  TextDiffReporter.cpp  TextDiffReporter.h
ApprovalTestsNursery_Catch2_Tests/: CIBuildOnlyReporterTests.cpp  CITests.cpp  CMakeLists.txt  CatchGeneratorExperiments.cpp  CatchReporterTests.cpp  CombinationApprovalsNewTests.cpp  CombinationApprovalsOldTests.cpp  CombinationTestHelpers.cpp  CombinationTestHelpers.h  DuplicateFakeReporter.h  ExtendApprovalTestNameTests.cpp  FileUtilsAdditionsTests.cpp  TextDiffReporterTests.cpp  main.cpp
ApprovalTestsNursery_Catch2_Tests/approval_tests/: CITests.Fail_with_ApprovalMismatchException.approved.txt  CatchReporterTests.CatchReporter_logs_failure.approved.txt  CombinationApprovalsNewTests.YouCanVerifyCombinationsNewOf6MoreVaried.approved.txt  CombinationApprovalsNewTests.YouCanVerifyCombinationsNewOf8MoreVaried.approved.txt  CombinationApprovalsNewTests.YouCanVerifyCombinationsNewOf9MoreVaried.approved.txt  CombinationApprovalsOldTests.CombinationOf2WithLambda.approved.txt  CombinationApprovalsOldTests.CombinationOf3WithLambda.approved.txt  CombinationApprovalsOldTests.YouCanVerifyCombinationsOf1MoreVaried.approved.txt  CombinationApprovalsOldTests.YouCanVerifyCombinationsOf4MoreVaried.approved.txt  CombinationApprovalsOldTests.YouCanVerifyCombinationsOf5MoreVaried.approved.txt  CombinationApprovalsOldTests.YouCanVerifyCombinationsOf7MoreVaried.approved.txt  ExtendApprovalTestNameTests.It_can_add_sections_to_file_names.case1.approved.txt  ExtendApprovalTestNameTests.It_can_add_sections_to_file_names.case2.approved.txt  TextDiffReporterTests.TextDiffReporter_writes_output_to_console.approved.txt
dependencies/: CMakeLists.txt
doc/: Additions.md  CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst
doc/doxygen/: CMakeLists.txt  OverviewForDoxygen.cpp
doc/mdsource/: Additions.source.md
doc/sphinx/: CMakeLists.txt  conf.py
scripts/: build-and-test-with-clang-preset.sh  configure.sh  make.sh  reformat_code.sh  test.sh
